# Everything_Public

./: 18th Note.md  2d Heat.py  301_501_33_time_vs_temp.py  API 530 Documents.md  Eutectic_temp.csv  First Attempt.md  Ideas.md  MyProjects.md  Noted App.md  OF_optimizer.py  Plotting.csv  Plotting.py  README.md  ascii_clock.py  boiling_curve.py  boolean_expressions.py  casting_data.csv  python2.py  total_casting.py  using_input.py  velocity_vs_cd (1).csv  vent_valve_6_7_24.py  writing_functions.py
.claude/: settings.local.json
5DOF_Flight/rocket-simulation-master/: INSTALLATION_SUMMARY.md  SETUP.md  pygame_ascent.py  pyproject.toml  requirements.txt  test_sim.py  test_simple.py
5DOF_Flight/rocket-simulation-master/lib/simulation/: __init__.py
5DOF_Flight/rocket-simulation-master/src/: environment.py  rocket.py
5DOF_Flight/rocket-simulation-master/src/data/input/atmosphere/: noise_adapter.py  wind.py
5DOF_Flight/rocket-simulation-master/src/rocketparts/: motor.py
5DOF_Flight/rocket-simulation-master/src/simulation/rocket/: logger.py
Context for Claude/: Contemplations.md  Isaac.md  New Note testing.md  New Notes (copy 3).md  New Notes.md  Noted App.md  Noted_App_Bugs.md  README.md
Economics/: investment_projection.py  ratings_analysis.py  requirements.txt  retirement_scenarios.py  sp500_analysis.py  stock_plotter.py
Elysium 2/: main.py
MOCNozzle/: MOCNozzle_Script.py  nozzle_contour_scaled.txt
MSEN_330/: Ross_Tanner_TH1_Q3.py  Ross_Tanner_final.ipynb  Ross_Tanner_homework_7.ipynb  Ross_Tanner_homework_7.py
RED Work/: 2d Heat.py  Cg_vs_time.py  (+9 more)
(+286 files in other folders)
